plugins {
    id 'java'
    id 'org.springframework.boot' version '3.1.5'
    id 'io.spring.dependency-management' version '1.1.3'
}

group = 'com.example'
version = '0.0.1-SNAPSHOT'

java {
    sourceCompatibility = '17'
}

configurations {
    compileOnly {
        extendsFrom annotationProcessor
    }
}

repositories {
    mavenCentral()
}

ext {
    versions = [
            'modelMapper'       : '3.1.1',
            'postgresql'        : '42.6.0',
            'liquibase'         : '4.24.0',
            'hibernateValidator': '8.0.1.Final',
            'lombok'            : '1.18.26'
    ]
}

dependencies {
    implementation "org.springframework.boot:spring-boot-starter"
    implementation "org.springframework.boot:spring-boot-starter-web"
    implementation "org.modelmapper:modelmapper:${versions.modelMapper}"
    implementation "org.postgresql:postgresql:${versions.postgresql}"
    implementation "org.springframework.boot:spring-boot-starter-data-jpa"
    implementation "org.liquibase:liquibase-core:${versions.liquibase}"
    implementation "org.hibernate.validator:hibernate-validator:${versions.hibernateValidator}"
    compileOnly "org.projectlombok:lombok:${versions.lombok}"
    annotationProcessor "org.projectlombok:lombok:${versions.lombok}"
    testImplementation "org.springframework.boot:spring-boot-starter-test"
}

tasks.named('test') {
    useJUnitPlatform()
}
